--- a/fourwinds/templates/base.html
+++ b/fourwinds/templates/base.html
@@ -151,23 +151,18 @@
                     </ul>
                     <ul class="nav navbar-nav social">
                         <li>
-                            <a href="#">
-                                <span class="facebook"></span>
+                            <a href="https://www.facebook.com/FourwindsTours/" target="_blank">
+                                <span class="ion-social-facebook social-icon"></span>
                             </a>
                         </li>
                         <li>
-                            <a href="#">
-                                <span class="instagram"></span>
+                            <a href="https://twitter.com/fourwindstours" target="_blank">
+                                <span class="ion-social-twitter social-icon"></span>
                             </a>
                         </li>
                         <li>
-                            <a href="#">
-                                <span class="twitter"></span>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <span class="pinterest"></span>
+                            <a href="https://www.linkedin.com/company-beta/6569482/" target="_blank">
+                                <span class="ion-social-linkedin social-icon"></span>
                             </a>
                         </li>
                     </ul>
@@ -221,20 +216,7 @@
             }
             $('.jcarousel').jcarousel('scroll',direction);
         }
-//         $(document).ready(function(){
-//             $('.jcarousel').jcarousel({
-//                 list: '.jcarousel-list',
-//                 items: '.jcarousel-item'
-//             });
-//             $('#top-navbar #travel-link').on('mouseover', function(e){
-//                 $('#top-navbar > [data-toggle="dropdown"]').trigger('mouseover');
-//             });
-//             $('#top-navbar #travel-dropdown-button');
-//             $('#top-navbar > [data-toggle="dropdown"]').bootstrapDropdownHover({
-//               // see next for specifications
-//             });
-// {#            $("#travel-menu").load("{% url 'travel_info' %}");#}
-//         });
+
         </script>
         <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-form-validator/2.3.26/jquery.form-validator.min.js"></script>
         <script type="text/javascript">
