Mirror top menu to footer

--- a/fourwinds/static/sass/_header.scss
+++ b/fourwinds/static/sass/_header.scss
@@ -31,6 +31,7 @@
 .main-nav {
     .navbar-header {
         .navbar-toggle {
+            border: 1px solid #ddd;
             .icon-bar {
                 background-color: #fff;
             }
@@ -87,44 +88,7 @@
     border: 0px;
 }
 
-@media only screen and (max-width: 768px){
-    .main-nav {
-        .navbar-nav {
-            float: left;
-            text-align: left;
-            width: 100%;
-            li {
-                a {
-                    &:hover {
-                        color: #00b19f !important;
-                        background-color: transparent !important;
-                    }
-                }
-            }
-            .dropdown-menu {
-                display: block;
-                position: static;
-                background-color: transparent;
-                border:0 none;
-                box-shadow: none;
-                margin-top: 0;
-                position: relative;
-                width: 100%;
-                padding-left: 15px;
-                li {
-                    a {
-                        color: #fff !important;
-                        padding:5px 15px 5px 25px;
-                        line-height:20px;
-                        &:hover {
-                            color: #00b19f !important;
-                        }
-                    }
-                }
-            }
-        }
-    }
-}
+@include mobile_show_links();
 
 .sub-arrow {
     display: none;
