--- a/website/templates/website/tags/travel_categories.html
+++ b/website/templates/website/tags/travel_categories.html
@@ -20,7 +20,7 @@
                         <p class="text-uppercase">{{ category.description }}</p>
                       </div>
                       <div class="learn-more">
-                        <a href="{% slugurl 'categories' %}?category={{ category.slug }}">LEARN MORE</a>
+                        <a href="{{ category.page_link_to.url }}">LEARN MORE</a>
                       </div>
                     </div>
                 </div>
