Add email sending to contact and get quote forms

--- a/website/templates/website/website_contact_us_page_landing.html
+++ b/website/templates/website/website_contact_us_page_landing.html
@@ -8,7 +8,7 @@
             <div class="col-md-12">
                 <div class="homepage-body-content margin-t-20">
                     {{ page.success_text | richtext }}
-                    <a href="{{ page.url }}">Go back</a>
+                    <a href="{{ page.url }}" class="btn btn-default">Go back</a>
                 </div>
             </div>
         </div>
