--- a/fourwinds/static/css/style.css
+++ b/fourwinds/static/css/style.css
@@ -256,8 +256,8 @@ have a fixed width and height (but it's not required).
 /* line 22, ../sass/_footer.scss */
 #footer #menu-footer .footer-nav .container #footer-nav .navbar-nav a {
   color: #fff;
-  font-size: 12px;
-  font-family: "Arial Rounded MT Bold";
+  font-size: 14px;
+  font-family: "Helvetica Neue", "Helvetica", "Arial" , sans-serif;
   padding-bottom: 5px;
 }
 /* line 27, ../sass/_footer.scss */
@@ -267,13 +267,14 @@ have a fixed width and height (but it's not required).
 }
 /* line 35, ../sass/_footer.scss */
 #footer #menu-footer .footer-nav .container #footer-nav .navbar-nav li .dropdown-menu li a {
+  font-size: 14px;
   color: #000;
 }
-/* line 48, ../sass/_footer.scss */
+/* line 49, ../sass/_footer.scss */
 #footer #menu-footer .social li a .social-icon {
   font-size: 28px;
 }
-/* line 56, ../sass/_footer.scss */
+/* line 57, ../sass/_footer.scss */
 #footer #menu-footer .policies li a {
   font-size: 12px;
   color: #999999;
