Add input mask to phone number field

--- a/fourwinds/static/css/style.css
+++ b/fourwinds/static/css/style.css
@@ -865,55 +865,57 @@ have a fixed width and height (but it's not required).
 /* line 236, ../sass/_pages.scss */
 .custom-form button {
   background-color: #ffbf09;
+  color: #fff;
+  margin-top: 10px;
 }
 
-/* line 241, ../sass/_pages.scss */
+/* line 243, ../sass/_pages.scss */
 .breadcrumb-wrapper {
   margin-top: 20px;
 }
-/* line 243, ../sass/_pages.scss */
+/* line 245, ../sass/_pages.scss */
 .breadcrumb-wrapper .breadcrumb {
   margin-bottom: 0px;
 }
-/* line 246, ../sass/_pages.scss */
+/* line 248, ../sass/_pages.scss */
 .breadcrumb-wrapper .breadcrumb li a {
   color: #01bdc9;
 }
 
-/* line 255, ../sass/_pages.scss */
+/* line 257, ../sass/_pages.scss */
 .testimonial-block .rich-text p {
   font-size: 16px;
   line-height: 30px;
 }
-/* line 259, ../sass/_pages.scss */
+/* line 261, ../sass/_pages.scss */
 .testimonial-block .rich-text p:first-child::before {
   content: '“';
   font-size: 20px;
 }
-/* line 265, ../sass/_pages.scss */
+/* line 267, ../sass/_pages.scss */
 .testimonial-block .rich-text p:last-child::after {
   content: "”";
   font-size: 20px;
 }
 
-/* line 274, ../sass/_pages.scss */
+/* line 276, ../sass/_pages.scss */
 .pager {
   max-width: 850px;
   margin: 0 auto;
   margin-top: 30px;
   margin-bottom: 30px;
 }
-/* line 280, ../sass/_pages.scss */
+/* line 282, ../sass/_pages.scss */
 .pager li a {
   color: #01bdc9;
 }
-/* line 284, ../sass/_pages.scss */
+/* line 286, ../sass/_pages.scss */
 .pager li:hover a {
   background-color: #102633;
   color: #fff;
 }
 
-/* line 292, ../sass/_pages.scss */
+/* line 294, ../sass/_pages.scss */
 #gmap {
   height: 300px !important;
 }
