--- a/website/templates/website/website_get_quote_page.html
+++ b/website/templates/website/website_get_quote_page.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% load wagtailcore_tags wagtailimages_tags home_tags %}
+{% load wagtailcore_tags wagtailimages_tags home_tags static %}
 
 {% block content %}
     <div class="container">
@@ -22,8 +22,8 @@
                                     </div>
                                 </div>
                             {% endfor %}
-                            <div class="col-md-12">
-                                <button type="submit" class="btn btn-lg pull-right">Finish</button>
+                            <div class="col-md-4 col-md-offset-4 btn-center">
+                                <button type="submit" class="btn btn-lg btn-block">Finish</button>
                             </div>
                         </form>
                     </div>
@@ -32,4 +32,11 @@
         </div>
     </div>
     {% testimonials_slider calling_page=self %}
+{% endblock %}
+
+{% block extra_js %}
+    <script type="text/javascript" src="{% static 'js/fourwinds.js' %}"></script>
+    <script type="text/javascript">
+        $("#id_phone-number").mask("(999) 999-9999");
+    </script>
 {% endblock %}
