Enlarge font of navigation links

--- a/fourwinds/static/sass/_header.scss
+++ b/fourwinds/static/sass/_header.scss
@@ -47,6 +47,7 @@
         vertical-align: top;
         li {
             a {
+                font-size: 15px;
                 color: $white;
                 font-weight: bold;
                 &:hover {
