--- a/fourwinds/static/sass/_footer.scss
+++ b/fourwinds/static/sass/_footer.scss
@@ -46,6 +46,7 @@
             }
         }
         .social {
+            margin-top: 20px;
             li {
                 a {
                     .social-icon {
