--- a/fourwinds/templates/base.html
+++ b/fourwinds/templates/base.html
@@ -15,7 +15,6 @@
         </title>
         <meta name="description" content="" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-
         {# Global stylesheets #}
         <!-- Latest compiled and minified CSS -->
         <link rel="stylesheet" type="text/css" href="{% static 'css/ionicons.min.css' %}">
@@ -66,9 +65,6 @@
         <div id="footer">
 
             <div class="text-center affiliates">
-                <p class="title">
-                    <span>OUR AFFILIATES</span>
-                </p>
                 <img src="{% static 'img/footer/footer-affiliates.png' %}" alt="affiliates">
             </div>
             <div id="menu-footer" class="text-center">
@@ -96,7 +92,7 @@
                 </div>
                 <div>
                     <address>
-                        &copy; 2016 Four Winds International Tours & Travel. All Rights Reserved.<br/>
+                        &copy; © 2017 Fourwinds Tours & Travel. All Rights Reserved.<br/>
                         website by: andreafoglia.com
                     </address>
 
