--- a/fourwinds/static/css/style.css
+++ b/fourwinds/static/css/style.css
@@ -273,11 +273,15 @@ have a fixed width and height (but it's not required).
   font-size: 14px;
   color: #000;
 }
-/* line 51, ../sass/_footer.scss */
+/* line 48, ../sass/_footer.scss */
+#footer #menu-footer .social {
+  margin-top: 20px;
+}
+/* line 52, ../sass/_footer.scss */
 #footer #menu-footer .social li a .social-icon {
   font-size: 28px;
 }
-/* line 59, ../sass/_footer.scss */
+/* line 60, ../sass/_footer.scss */
 #footer #menu-footer .policies li a {
   font-size: 12px;
   color: #999999;
