Enhance form submit button

--- a/fourwinds/static/sass/_pages.scss
+++ b/fourwinds/static/sass/_pages.scss
@@ -237,6 +237,11 @@
         background-color: $yellow;
         color: $white;
         margin-top: 10px;
+        font-family: $gothambold;
+        border-radius: 100px;
+        &:hover {
+            color: $white;
+        }
     }
 }
 
