--- a/fourwinds/static/css/style.css
+++ b/fourwinds/static/css/style.css
@@ -509,13 +509,26 @@ have a fixed width and height (but it's not required).
   align-items: center;
   justify-content: center;
 }
+/* line 163, ../sass/_landing.scss */
+.homepage-body-content .back-btn {
+  background-image: none;
+  background-color: #102633;
+  color: #fff;
+  padding: 10px 15px;
+  border-radius: 100px;
+}
+/* line 169, ../sass/_landing.scss */
+.homepage-body-content .back-btn:active {
+  background-color: #102633;
+  color: #fff;
+}
 
-/* line 165, ../sass/_landing.scss */
+/* line 176, ../sass/_landing.scss */
 .carousel-caption {
   padding-bottom: 5%;
 }
 
-/* line 170, ../sass/_landing.scss */
+/* line 181, ../sass/_landing.scss */
 .jcarousel-control-prev img, .jcarousel-control-next img {
   background-color: #ddd;
   padding: 10px 15px;
@@ -523,86 +536,86 @@ have a fixed width and height (but it's not required).
 }
 
 @media (max-width: 560px) {
-  /* line 180, ../sass/_landing.scss */
+  /* line 191, ../sass/_landing.scss */
   #main-carousel .left .icon, #main-carousel .right .icon {
     width: 30px;
     height: 30px;
     border-radius: 20px;
   }
-  /* line 188, ../sass/_landing.scss */
+  /* line 199, ../sass/_landing.scss */
   #main-carousel .carousel-inner .item .carousel-item {
     height: 200px;
   }
-  /* line 194, ../sass/_landing.scss */
+  /* line 205, ../sass/_landing.scss */
   #main-carousel .carousel-caption img {
     height: 100px;
   }
-  /* line 197, ../sass/_landing.scss */
+  /* line 208, ../sass/_landing.scss */
   #main-carousel .carousel-caption .cta {
     padding-top: 20px;
     margin-bottom: 0px;
   }
-  /* line 200, ../sass/_landing.scss */
+  /* line 211, ../sass/_landing.scss */
   #main-carousel .carousel-caption .cta .cta-button {
     font-size: 12px;
     padding: 12px 16px;
   }
 
-  /* line 208, ../sass/_landing.scss */
+  /* line 219, ../sass/_landing.scss */
   .jcarousel-control-prev img, .jcarousel-control-next img {
     padding: 5px 8px;
   }
 }
 @media (max-width: 768px) and (min-width: 560px) {
-  /* line 217, ../sass/_landing.scss */
+  /* line 228, ../sass/_landing.scss */
   #main-carousel .left .icon, #main-carousel .right .icon {
     width: 30px;
     height: 30px;
     border-radius: 20px;
   }
-  /* line 225, ../sass/_landing.scss */
+  /* line 236, ../sass/_landing.scss */
   #main-carousel .carousel-inner .item .carousel-item {
     height: 250px;
   }
-  /* line 231, ../sass/_landing.scss */
+  /* line 242, ../sass/_landing.scss */
   #main-carousel .carousel-caption img {
     height: 150px;
   }
-  /* line 234, ../sass/_landing.scss */
+  /* line 245, ../sass/_landing.scss */
   #main-carousel .carousel-caption .cta {
     padding-top: 20px;
     margin-bottom: -30px;
   }
-  /* line 237, ../sass/_landing.scss */
+  /* line 248, ../sass/_landing.scss */
   #main-carousel .carousel-caption .cta .cta-button {
     font-size: 14px;
     padding: 12px 15px;
   }
 }
 @media (max-width: 1150px) and (min-width: 769px) {
-  /* line 249, ../sass/_landing.scss */
+  /* line 260, ../sass/_landing.scss */
   #main-carousel .left .icon, #main-carousel .right .icon {
     width: 30px;
     height: 30px;
     border-radius: 20px;
   }
-  /* line 256, ../sass/_landing.scss */
+  /* line 267, ../sass/_landing.scss */
   #main-carousel .carousel-caption img {
     height: 200px;
   }
-  /* line 259, ../sass/_landing.scss */
+  /* line 270, ../sass/_landing.scss */
   #main-carousel .carousel-caption .cta {
     padding-top: 20px;
     margin-bottom: -30px;
   }
-  /* line 262, ../sass/_landing.scss */
+  /* line 273, ../sass/_landing.scss */
   #main-carousel .carousel-caption .cta .cta-button {
     font-size: 14px;
     padding: 12px 15px;
   }
 }
 @media (min-width: 1150px) {
-  /* line 273, ../sass/_landing.scss */
+  /* line 284, ../sass/_landing.scss */
   .carousel-caption .cta {
     margin-bottom: 30px;
   }
@@ -874,55 +887,61 @@ have a fixed width and height (but it's not required).
   background-color: #ffbf09;
   color: #fff;
   margin-top: 10px;
+  font-family: "gothambold";
+  border-radius: 100px;
+}
+/* line 242, ../sass/_pages.scss */
+.custom-form button:hover {
+  color: #fff;
 }
 
-/* line 243, ../sass/_pages.scss */
+/* line 248, ../sass/_pages.scss */
 .breadcrumb-wrapper {
   margin-top: 20px;
 }
-/* line 245, ../sass/_pages.scss */
+/* line 250, ../sass/_pages.scss */
 .breadcrumb-wrapper .breadcrumb {
   margin-bottom: 0px;
 }
-/* line 248, ../sass/_pages.scss */
+/* line 253, ../sass/_pages.scss */
 .breadcrumb-wrapper .breadcrumb li a {
   color: #01bdc9;
 }
 
-/* line 257, ../sass/_pages.scss */
+/* line 262, ../sass/_pages.scss */
 .testimonial-block .rich-text p {
   font-size: 16px;
   line-height: 30px;
 }
-/* line 261, ../sass/_pages.scss */
+/* line 266, ../sass/_pages.scss */
 .testimonial-block .rich-text p:first-child::before {
   content: '“';
   font-size: 20px;
 }
-/* line 267, ../sass/_pages.scss */
+/* line 272, ../sass/_pages.scss */
 .testimonial-block .rich-text p:last-child::after {
   content: "”";
   font-size: 20px;
 }
 
-/* line 276, ../sass/_pages.scss */
+/* line 281, ../sass/_pages.scss */
 .pager {
   max-width: 850px;
   margin: 0 auto;
   margin-top: 30px;
   margin-bottom: 30px;
 }
-/* line 282, ../sass/_pages.scss */
+/* line 287, ../sass/_pages.scss */
 .pager li a {
   color: #01bdc9;
 }
-/* line 286, ../sass/_pages.scss */
+/* line 291, ../sass/_pages.scss */
 .pager li:hover a {
   background-color: #102633;
   color: #fff;
 }
 
-/* line 294, ../sass/_pages.scss */
+/* line 299, ../sass/_pages.scss */
 #gmap {
   height: 300px !important;
 }
