--- a/fourwinds/static/sass/_landing.scss
+++ b/fourwinds/static/sass/_landing.scss
@@ -143,7 +143,7 @@
         font-family: gotham-bold-regular;
     }
     .more-testimonials:hover {
-    color: #fff;
+        color: #fff;
     }
 }
 
@@ -158,6 +158,17 @@
                 align-items: center;
                 justify-content: center;
             }
+        }
+    }
+    .back-btn {
+        background-image: none;
+        background-color: $dark-indigo;
+        color: $white;
+        padding: 10px 15px;
+        border-radius: 100px;
+        &:active {
+            background-color: $dark-indigo;
+            color: $white;
         }
     }
 }
