--- a/website/templates/website/website_contact_us_page_landing.html
+++ b/website/templates/website/website_contact_us_page_landing.html
@@ -7,8 +7,8 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="homepage-body-content margin-t-20">
-                    {{ page.success_text | richtext }}
-                    <a href="{{ page.url }}" class="btn btn-default">Go back</a>
+                    {{ page.success_text | richtext }}<br>
+                    <a href="{{ page.url }}" class="btn btn-default back-btn">Go back</a>
                 </div>
             </div>
         </div>
