--- a/fourwinds/templates/base.html
+++ b/fourwinds/templates/base.html
@@ -92,7 +92,7 @@
                 </div>
                 <div>
                     <address>
-                        &copy; © 2017 Fourwinds Tours & Travel. All Rights Reserved.<br/>
+                        &copy; 2017 Fourwinds Tours & Travel. All Rights Reserved.<br/>
                         website by: andreafoglia.com
                     </address>
 
