--- a/home/templates/home/tags/quick_contact_form.html
+++ b/home/templates/home/tags/quick_contact_form.html
@@ -22,10 +22,10 @@
                   </select>
                </div>
                <div class="form-group">
-                  <input id="id_email-address" name="email" type="email" required="" class="form-control" placeholder="Email">
+                  <input id="id_email-address" name="email-address" type="email" required="" class="form-control" placeholder="Email">
                </div>
                <div class="form-group">
-                   <input id="id_phone-number" name="phone-number" step="any" type="number" required="" class="form-control" placeholder="Phone Number">
+                   <input id="id_phone-number" name="phone-number" step="any" type="text" required="" class="form-control" placeholder="Phone Number">
                </div>
                <div class="text-center">
                    <button class="btn" type="submit">Get Started</button>
