--- a/website/templates/website/website_internal_content_page.html
+++ b/website/templates/website/website_internal_content_page.html
@@ -21,3 +21,12 @@
         </div>
     </div>
 {% endblock %}
+
+{% block extra_js %}
+    <script type="text/javascript" src="{% static 'js/fourwinds.js' %}"></script>
+    <script type="text/javascript">
+        $(document).ready(function(){
+            $("#id_phone-number").mask("(999) 999-9999");
+        })
+    </script>
+{% endblock %}
