--- a/fourwinds/static/sass/_pages.scss
+++ b/fourwinds/static/sass/_pages.scss
@@ -74,6 +74,7 @@
     .widget-item {
         width: 100%;
         .content {
+            width: 320px;
             background: #102834;
             color: #f3b701;
             font-family: $gothambold;
