Redirect get quote form to a new page on success submission

--- a/home/templates/home/tags/quick_contact_form.html
+++ b/home/templates/home/tags/quick_contact_form.html
@@ -4,8 +4,7 @@
            <div class="form-title">
                Quick Contact Form
            </div>
-           <form class="" action="/get-quote/" method="post">
-              {% csrf_token %}
+           <form class="" action="/get-quote/" method="get">
                <div class="form-group">
                   <input id="id_firstname" maxlength="255" name="first-name" type="text" required="" class="form-control" placeholder="First Name">
                </div>
