--- a/website/templates/website/website_get_quote_page_landing.html
+++ b/website/templates/website/website_get_quote_page_landing.html
@@ -7,8 +7,9 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="homepage-body-content margin-t-20">
-                    {{ page.success_text | richtext }}<br>
-                    <a href="{{ page.url }}" class="btn btn-default back-btn">Go back</a>
+                    <script type="text/javascript">
+                        window.location = "{{ redirect_success_to.url }}";
+                    </script>
                 </div>
             </div>
         </div>
