Change types of trip

--- a/website/templates/website/website_get_quote_page.html
+++ b/website/templates/website/website_get_quote_page.html
@@ -65,11 +65,10 @@
                                 <label>Type of Trip:</label>
                                 <select id="id_type-of-trip" name="type-of-trip">
                                     <option value="Please select" selected="selected">Please select</option>
-                                    <option value="Band">Band</option>
-                                    <option value="Orchestra">Orchestra</option>
-                                    <option value="Chorus">Chorus</option>
-                                    <option value="Senior">Senior</option>
-                                    <option value="International">International</option>
+                                    <option value="Domestic Trip">Domestic Trip</option>
+                                    <option value="International Trip">International Trip</option>
+                                    <option value="Field Trip">Field Trip</option>
+                                    <option value="Senior Trip">Senior Trip</option>
                                     <option value="Other">Other</option>
                                 </select>
                             </div>
