--- a/website/templates/website/website_get_quote_page.html
+++ b/website/templates/website/website_get_quote_page.html
@@ -52,7 +52,7 @@
                                 <label>Role:</label>
                                 <span>*required</span>
                                 <select id="id_role" name="role" required="">
-                                    <option value="Please select" {% if not role %}selected{% endif %}>Please select</option>
+                                    <option value="" {% if not role %}selected{% endif %}>Please select</option>
                                     <option value="Teacher" {% if role == 'Teacher' %}selected{% endif %}>Teacher</option>
                                     <option value="Student" {% if role == 'Student' %}selected{% endif %}>Student</option>
                                     <option value="Parent" {% if role == 'Parent' %}selected{% endif %}>Parent</option>
@@ -64,7 +64,7 @@
                             <div class="form-group">
                                 <label>Type of Trip:</label>
                                 <select id="id_type-of-trip" name="type-of-trip">
-                                    <option value="Please select" selected="selected">Please select</option>
+                                    <option value="" selected="selected">Please select</option>
                                     <option value="Domestic Trip">Domestic Trip</option>
                                     <option value="International Trip">International Trip</option>
                                     <option value="Field Trip">Field Trip</option>
@@ -77,7 +77,7 @@
                             <div class="form-group">
                                 <label>Estimated Trip Year:</label>
                                 <select id="id_estimated-trip-year" name="estimated-trip-year">
-                                    <option value="Please select" selected="selected">Please select</option>
+                                    <option value="" selected="selected">Please select</option>
                                     <option value="2017">2017</option>
                                     <option value="2018">2018</option>
                                     <option value="2019">2019</option>
